// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`android BpkNavigationBarButton should render correctly back icon 1`] = `
<View
  style={
    Object {
      "borderRadius": 40,
    }
  }
>
  <View
    accessibilityLabel="Back"
    accessible={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": 872415231,
        "type": "RippleAndroid",
      }
    }
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Array [
            Object {
              "padding": 8,
            },
            Object {
              "color": "rgb(255, 255, 255)",
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`android BpkNavigationBarButton should render correctly disabled 1`] = `
<View
  style={
    Object {
      "borderRadius": 40,
    }
  }
>
  <View
    accessibilityLabel="Done"
    accessible={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": 872415231,
        "type": "RippleAndroid",
      }
    }
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Array [
            Object {
              "padding": 8,
            },
            Object {
              "color": "rgb(127, 215, 232)",
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`android BpkNavigationBarButton should render correctly with close icon 1`] = `
<View
  style={
    Object {
      "borderRadius": 40,
    }
  }
>
  <View
    accessibilityLabel="Close"
    accessible={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": 872415231,
        "type": "RippleAndroid",
      }
    }
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Array [
            Object {
              "padding": 8,
            },
            Object {
              "color": "rgb(255, 255, 255)",
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`android BpkNavigationBarButton should render correctly with tick icon 1`] = `
<View
  style={
    Object {
      "borderRadius": 40,
    }
  }
>
  <View
    accessibilityLabel="Done"
    accessible={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": 872415231,
        "type": "RippleAndroid",
      }
    }
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Array [
            Object {
              "padding": 8,
            },
            Object {
              "color": "rgb(255, 255, 255)",
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`android BpkNavigationBarButton should respect "disabledTintColor" 1`] = `
<View
  style={
    Object {
      "borderRadius": 40,
    }
  }
>
  <View
    accessibilityLabel="Done"
    accessible={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": 872415231,
        "type": "RippleAndroid",
      }
    }
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Array [
            Object {
              "padding": 8,
            },
            Object {
              "color": "red",
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`android BpkNavigationBarButton should respect "tintColor" 1`] = `
<View
  style={
    Object {
      "borderRadius": 40,
    }
  }
>
  <View
    accessibilityLabel="Done"
    accessible={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": 872415231,
        "type": "RippleAndroid",
      }
    }
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Array [
            Object {
              "padding": 8,
            },
            Object {
              "color": "red",
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;

exports[`android BpkNavigationBarButton should respect "touchableColor" 1`] = `
<View
  style={
    Object {
      "borderRadius": 40,
    }
  }
>
  <View
    accessibilityLabel="Done"
    accessible={true}
    isTVSelectable={true}
    nativeBackgroundAndroid={
      Object {
        "borderless": true,
        "color": 872349696,
        "type": "RippleAndroid",
      }
    }
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
  >
    <Text
      allowFontScaling={false}
      style={
        Array [
          Object {
            "color": "rgb(82, 76, 97)",
            "fontFamily": "BpkIcon",
            "fontSize": 24,
            "includeFontPadding": false,
          },
          Array [
            Object {
              "padding": 8,
            },
            Object {
              "color": "rgb(255, 255, 255)",
            },
          ],
        ]
      }
    >
      
    </Text>
  </View>
</View>
`;
